{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 17,
  "lineage": "b7411a9a-0df2-06ae-7fd3-85c8af7d897f",
  "resources": [
    {
      "module": "module.intro_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092376285579:network-acl/acl-0c2d251712c6fb073",
            "default_network_acl_id": "acl-0c2d251712c6fb073",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c2d251712c6fb073",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "092376285579",
            "subnet_ids": [
              "subnet-0270bfe71de987230",
              "subnet-0ed6a99173f901d16"
            ],
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default"
            },
            "vpc_id": "vpc-04e42cbd903fd5a14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.intro_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.intro_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092376285579:route-table/rtb-0545f239473b673c2",
            "default_route_table_id": "rtb-0545f239473b673c2",
            "id": "rtb-0545f239473b673c2",
            "owner_id": "092376285579",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-04e42cbd903fd5a14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.intro_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.intro_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092376285579:security-group/sg-0d490dbdd85f7cdc6",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d490dbdd85f7cdc6",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "092376285579",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default"
            },
            "vpc_id": "vpc-04e42cbd903fd5a14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.intro_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.intro_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092376285579:internet-gateway/igw-066a6ed5a0f448ffb",
            "id": "igw-066a6ed5a0f448ffb",
            "owner_id": "092376285579",
            "tags": {
            },
            "tags_all": {
            },
            "vpc_id": "vpc-04e42cbd903fd5a14"
          },
          "dependencies": [
            "module.intro_vpc.aws_vpc.this",
            "module.intro_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.intro_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-066a6ed5a0f448ffb",
            "id": "r-rtb-031575a75fa65b68d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-031575a75fa65b68d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.intro_vpc.aws_internet_gateway.this",
            "module.intro_vpc.aws_route_table.public",
            "module.intro_vpc.aws_vpc.this",
            "module.intro_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.intro_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092376285579:route-table/rtb-031575a75fa65b68d",
            "id": "rtb-031575a75fa65b68d",
            "owner_id": "092376285579",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-public"
            },
            "tags_all": {
              "Name": "-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e42cbd903fd5a14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.intro_vpc.aws_vpc.this",
            "module.intro_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.intro_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05caa32ded56eeb98",
            "route_table_id": "rtb-031575a75fa65b68d",
            "subnet_id": "subnet-0ed6a99173f901d16"
          },
          "dependencies": [
            "module.intro_vpc.aws_route_table.public",
            "module.intro_vpc.aws_subnet.public",
            "module.intro_vpc.aws_vpc.this",
            "module.intro_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0513716172458ac06",
            "route_table_id": "rtb-031575a75fa65b68d",
            "subnet_id": "subnet-0270bfe71de987230"
          },
          "dependencies": [
            "module.intro_vpc.aws_route_table.public",
            "module.intro_vpc.aws_subnet.public",
            "module.intro_vpc.aws_vpc.this",
            "module.intro_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.intro_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092376285579:subnet/subnet-0ed6a99173f901d16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.7.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed6a99173f901d16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092376285579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "-public-us-east-1a"
            },
            "tags_all": {
              "Name": "-public-us-east-1a"
            },
            "vpc_id": "vpc-04e42cbd903fd5a14"
          },
          "dependencies": [
            "module.intro_vpc.aws_vpc.this",
            "module.intro_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092376285579:subnet/subnet-0270bfe71de987230",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.7.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0270bfe71de987230",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092376285579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "-public-us-east-1c"
            },
            "tags_all": {
              "Name": "-public-us-east-1c"
            },
            "vpc_id": "vpc-04e42cbd903fd5a14"
          },
          "dependencies": [
            "module.intro_vpc.aws_vpc.this",
            "module.intro_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.intro_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092376285579:vpc/vpc-04e42cbd903fd5a14",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.7.0.0/16",
            "default_network_acl_id": "acl-0c2d251712c6fb073",
            "default_route_table_id": "rtb-0545f239473b673c2",
            "default_security_group_id": "sg-0d490dbdd85f7cdc6",
            "dhcp_options_id": "dopt-07579bc8288d70adb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04e42cbd903fd5a14",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0545f239473b673c2",
            "owner_id": "092376285579",
            "tags": {
            },
            "tags_all": {
            }
          }
        }
      ]
    }
  ]
}